--- a/src/App.css
+++ b/src/App.css
@@ -21,4 +21,6 @@
   width: 100%;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
+  height: 0px;
+  transition: height 0.3s ease-out;
 }
