--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,16 @@
+:root {
+  margin: 0;
+  padding: 0;
+}
+* {
+  box-sizing: border-box;
+}
+body {
+  background-color: rgb(16, 23, 33);
+}
 .container {
   display: flex;
+
   gap: 50px;
   padding: 20px;
   background-color: rgb(16, 23, 33);
